--- a/res/lang/en.yml
+++ b/res/lang/en.yml
@@ -1,6 +1,9 @@
 blocks: 'Blocks'
 uid: 'UID'
 title: 'Title'
+enabled: 'Enabled'
+word_yes: 'Yes'
+word_no: 'No'
 
 odm_ui_browser_title_content_block: 'Blocks'
 odm_ui_form_title_modify_content_block: 'Modify block'
